--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -411,7 +411,7 @@ Header Style
   display: inline-block;
 }
 
-.header-area .main-nav .logo h1 {
+.header-area .main-nav .logo h3 {
   line-height: 100px;
   font-size: 28px;
   text-transform: uppercase;
@@ -420,7 +420,17 @@ Header Style
   letter-spacing: 2px;
   width: max-content;
 }
-
+@media (max-width: 768px){
+  .header-area .main-nav .logo h3 {
+    line-height: 100px;
+    font-size: 18px;
+    /* text-transform: uppercase; */
+    color: #1e1e1e;
+    font-weight: 700;
+    letter-spacing: 2px;
+    width: max-content;
+  }
+}
 .background-header .main-nav .logo h1 {
   line-height: 80px;
 }
