--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,6 +131,11 @@ body {
 .videosec {
   margin-top: 15px !important;
 }
+.hero-section{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .section {
   margin-top: 120px;
 }
@@ -758,19 +763,19 @@ Banner Style
 }
 
 .main-banner .item-1 {
-  background-image: url(../images/car-1.jpg);
+  background-image: url(../images/car-4.jpg);
   height: 300px;
   
 }
 
 .main-banner .item-2 {
-  background-image: url(../images/car-2.jpg);
+  background-image: url(../images/car-5.jpg);
   height: 300px;
   
 }
 
 .main-banner .item-3 {
-  background-image: url(../images/car-3.jpg);
+  background-image: url(../images/car-6.jpg);
   height: 300px;
   
 }
@@ -977,7 +982,7 @@ Video Style
 */
 
 .video {
-  background-image: url(../images/video-bg.jpg);
+  background-image: url(../images/video-bg-1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
