--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -982,7 +982,7 @@ Video Style
 */
 
 .video {
-  background-image: url(../images/video-bg-1.jpg);
+  background-image: url(../images/video-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
