--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1640,6 +1640,30 @@ Contact Page Style
   min-width: 360px;
 }
 
+.contact-item{
+  background-color: #ffffff;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  padding: 35px 30px;
+}
+@media (min-width: 768px) {
+  .contact-item{
+    background-color: #ffffff;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+    padding: 35px 30px;
+    width: 40%;
+  }
+}
+@media (max-width: 768px) {
+  .contact-item{
+    background-color: #ffffff;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+    padding: 35px 30px;
+    width: 90%;
+  }
+  .contact-item h5{
+    font-size: 1.1rem;
+  }
+}
 .contact-page .phone {
   margin-bottom: 30px;
 }
