--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,7 @@ body {
 }
 .videosec {
   margin-top: 15px !important;
+  overflow-x: hidden;
 }
 .hero-section{
   display: flex;
@@ -1405,6 +1406,7 @@ Page Header Style
   background-size: cover;
   padding: 110px 0px;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .page-heading span {
@@ -1617,7 +1619,9 @@ Single Page Style
 Contact Page Style
 --------------------------------------------- 
 */
-
+.contact-page{
+  overflow-x: hidden;
+}
 .contact-page #map {
   margin-top: 100px;
 }
