mobile view carousel

--- a/assets/css/owl.css
+++ b/assets/css/owl.css
@@ -52,6 +52,11 @@
   .owl-carousel .owl-nav.disabled,
   .owl-carousel .owl-dots.disabled {
     display: none; }
+  @media (max-width: 768px){
+    .owl-carousel .owl-dots{
+      display: none;
+    }
+  }
   .owl-carousel .owl-nav .owl-prev,
   .owl-carousel .owl-nav .owl-next,
   .owl-carousel .owl-dot {
